# eggella

./: .gitignore  .readthedocs.yaml  README.md  README_RU.md  mkdocs.yaml  mkdocs.yml  pyproject.toml
docs/: index.md
docs/EN/: advanced.md  code_separation.md  minimal_app.md  tutorial.md  usage.md
docs/RU/: advanced.md  code_separation.md  index.md  minimal_app.md  tutorial.md  usage.md
eggella/: __init__.py  _patches.py  _types.py  app.py  exceptions.py  manager.py
eggella/command/: __init__.py  abc.py  arg_caster.py  command.py  completer.py  exception_handle.py  handler.py  objects.py  parser.py
eggella/events/: abc.py  events.py
eggella/fsm/: __init__.py  fsm.py
eggella/shortcuts/: cmd_shortcuts.py  help_pager.py
eggella/tools/: type_caster.py
examples/: bp_main_app.py  bp_plugins.py  custom_command_handler.py  customisation.py  fsm.py  fsm_infinity.py  guess_game.py  hide_commands.py  nested.py  quickstart.py  states.py
examples/code_separation/: __init__.py  commands.py  config.py  events.py  form.py
examples/docs/: command_key.py  minimal_app.py  usage_command_key.py
examples/docs/tapes/: minimal_app.tape  usage_fsm.tape
examples/docs/tutorial/: guess_game1.py  guess_game2.py  guess_game3.py
examples/docs/tutorial/tapes/: guess_game1.tape  guess_game2.tape  guess_game3.tape
examples/docs/usage/: usage_app_ctx.py  usage_custom_arg_parser.py  usage_default_arguments.py  usage_error_handle.py  usage_events.py  usage_fsm.py  usage_nested.py  usage_parse_arguments.py  usage_shortcuts.py
examples/docs/usage/tapes/: blueprints.tape  quick_app.tape  usage_app_ctx.tape  usage_cusom_parse_args.tape  usage_default_arg.tape  usage_err_handle.tape  usage_events.tape  usage_fsm.tape  usage_nested.tape  usage_parse_args.tape  usage_set_key.tape  usage_shortcuts.tape
