[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eggella"
dynamic = ["version"]
description = 'Create awesome command line applications with less effort'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "georgiy" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["prompt-toolkit"]

[project.urls]
Documentation = "https://eggella.readthedocs.io/en/latest/"
Source = "https://github.com/vypivshiy/eggella"

[tool.hatch.version]
path = "eggella/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/eggella",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "black", "isort"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/eggella tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = ["E", "F"]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

exclude = [
  "examples",
  "venv",
  "__init__.py"
]

[tool.ruff.isort]
known-first-party = ["eggella"]

[tool.mypy]
python_version = 3.8
pretty = true
ignore_missing_imports = true
exclude = ["env", ".env", "venv", "tests/*", "__pycache__", "examples"]
# files = "scrape_schema/*.py,scrape_schema/fields/*.py,scrape_schema/callbacks/*.py"

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true


[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["eggella"]
branch = true
parallel = true
omit = [
  "eggella/__init__.py",
]

[tool.coverage.paths]
eggella = ["src/eggella", "*/eggella/src/eggella"]
tests = ["tests", "*/eggella/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
